Fix showing footer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --header-height-web: 58px;
   --header-height-mobile: 48px;
   --footer-height-web: 58px;
+  --footer-height-mobile: 48px;
 }
 
 body {
